plugins {
	id 'java' // Apply to ensure shared Java settings
	id 'io.spring.dependency-management' version '1.1.4' // Dependency management
}

allprojects {
	group = 'org.flagd.hub'
	version = '1.0-SNAPSHOT'

	repositories {
		mavenCentral()
	}
}

subprojects {
	apply plugin: 'java'

	// Common d for all subprojects
	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(17) // Use Java 17
		}
	}

	tasks.withType(JavaCompile) {
		options.encoding = 'UTF-8'
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {

}